# kevin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  project-scope.md  pyproject.toml
.ai/: .sync-manifest  agent_sync.yaml
.ai/src/: AGENTS.md
.ai/src/rules/: code.md  project-wiki.md
.ai/src/settings/: claude.json
.ai/src/skills/add-convention/: SKILL.md
.ai/src/skills/demo-component/: SKILL.md
.ai/src/skills/export-deck/: SKILL.md
.ai/src/skills/lib/: render_html.py
.ai/src/skills/next-issue/: SKILL.md
.ai/src/skills/post-merge-sync/: SKILL.md
.ai/src/skills/project-status/: SKILL.md
.ai/src/skills/ship-pr/: SKILL.md
.ai/src/skills/spec-milestone/: SKILL.md
.ai/src/tools/: antigravity.yaml  claude.yaml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  gemini-dispatch.yml  gemini-review.yml
assets/: README.md
assets/mjcf/: full_scene.xml  peg.xml  wall_with_holes.xml
assets/mjcf/menagerie_panda/: panda.xml
configs/: README.md
data/dataset_0/: metadata.json
data/dataset_1/: metadata.json
data/dataset_10/: metadata.json
data/dataset_2/: metadata.json
data/dataset_3_lowdiv/: metadata.json
data/dataset_4/: metadata.json
data/dataset_42/: metadata.json
data/dataset_6/: metadata.json
data/dataset_7/: metadata.json
data/dataset_8/: metadata.json
data/dataset_9/: metadata.json
data/dataset_vision/: metadata.json
docs/: acronym-dictionary.md  architecture-tour.md  cli.md  data-schema.md  lab-78-scripted-human-realism.md  milestone-1-spec.md  milestone-2-spec.md  milestone-3-spec.md  milestone-4-spec.md  milestone-5-spec.md  milestone-6-spec.md  milestone-7-spec.md  milestones.md  phase-1-results.md  policy-guide.md  recentering-handoff.md
docs/d1-design-review/: README.md  build_deck.py
docs/design/: evaluation-protocol.md  expert-corrections.md  human-generation.md  policy-model.md  problem-structure.md  teleop-input.md
docs/results/: kpi-dashboard.md
docs/results/phase-1/: band_scale0.4_trials.csv  flatwall_scale1.0_trials.csv  repro_2026-07-22_ar0_trials.csv  repro_2026-07-22_ar100_trials.csv
docs/results/phase-1/checkpoints/: README.md
docs/results/phase-1/checkpoints/lab101_ft_ar0_ds10/: checkpoint.pt  history.json  metadata.json
docs/results/phase-1/checkpoints/lab101_ft_ar100_ds10/: checkpoint.pt  history.json  metadata.json
docs/results/phase-1/lab114/: seed0_metadata.json  seed0_trials.csv  seed1_metadata.json  seed1_trials.csv  seed2_metadata.json  seed2_trials.csv  seed3_metadata.json  seed3_trials.csv  seed4_metadata.json  seed4_trials.csv
docs/results/phase-1/lab114/hc/: cpu_seed0_metadata.json  cpu_seed0_trials.csv
docs/review/: code-audit.md  divergence-investigation.md  docs-audit.md
scripts/: README.md  dagger.py  dev_harness_controller.py  evaluate.py  generate_dataset.py  report_results.py  run_episode.py  setup.ps1  setup.sh  smoke_test_sim.py  stream_webcam.py  train_policy.py  view_generated_wall.py
scripts/dev/: aggregate_eval.py  compare_human_vs_scripted.py  debug_approach_speed.py  debug_contact_trace.py  debug_park_quat.py  debug_quat_sign.py  demo_jacobian_transpose.py  demo_null_space.py  lab104_ablation_summary.py  lab104_probe_action_rate.py  lab105_label_coverage.py  lab105_perception_probe.py  lab105_rollout_probe.py  lab105_stagec_ablation_summary.py  lab106_delta_target_audit.py  lab106_error_decomp.py  lab106_ft_checkpoint_sweep.py  lab108_align_sweep.py  lab108_brake_sweep.py  lab114_corpus_identity.py  lab114_seed_spread.py  lab114_weight_distance.py  lab42_corpus_diff.py  lab42_docs_coverage.py  lab42_fingerprint_audit.py  lab42_headline_interval.py  lab42_outcome_breakdown.py  lab42_report_audit.py  lab42_seed_overlap.py  lab77_difficulty_sweep.py  lab78_eyeball_dataset0.py  lab78_verify_replay_matches_baseline.py  lab81_offline_eval.py  lab81_recorded_vision_eval.py  lab81_vision_bringup_report.py  lab83_latency.py  lab92_raw_motion_probe.py  lab95_recorded_forensics.py  lab95_scripted_contact_probe.py  lab98_expert_recalibration_sweep.py  (+38 more)
src/ai_teleop/: __init__.py  cli.py  dagger.py
src/ai_teleop/common/: __init__.py  command.py  geometry.py  log.py  observation.py  seating.py
src/ai_teleop/common/utils/: __init__.py  rotations.py
src/ai_teleop/control/: __init__.py  backbone.py  diff_ik.py  impedance.py  lock.py
src/ai_teleop/data/: __init__.py  dataset.py  generate.py  images.py  schema.py  step_callbacks.py  trajectory.py
src/ai_teleop/domain/: __init__.py  delta.py  interfaces.py
src/ai_teleop/eval/: __init__.py  ablation.py  observer.py  report.py  schema.py  trace.py
src/ai_teleop/expert/: __init__.py  expert.py
src/ai_teleop/input/: __init__.py  hand_tracker.py  scripted_noisy_human.py  vision_input.py
src/ai_teleop/policy/: __init__.py  config.py  image_encoder.py  losses.py  model.py  residual_policy.py  run_artifacts.py  train.py
src/ai_teleop/sim/: __init__.py  config.py  env_setup.py  runner.py  scene.py  scene_source.py
src/ai_teleop/sim/scenegen/: __init__.py  compose.py  config.py  decompose.py  emit.py  generate.py  meta.py  partition2d.py  sampler.py  shapes2d.py  solid.py
tests/: README.md  test_ablation.py  test_backbone_smoke.py  test_dagger.py  test_dataset.py  test_dataset_loader.py  test_diff_ik.py  test_env_config.py  test_episode_e2e.py  test_eval_observer.py  test_eval_report.py  test_eval_trace.py  test_expert.py  test_log.py  test_policy_losses.py  test_policy_model.py  test_replay_reproduces_generation.py  test_residual_policy.py  test_run_artifacts.py  test_runner_pacing.py  test_runner_render_cadence.py  test_scene_randomization.py  test_scenegen.py  test_scripted_noisy_human.py  test_scripted_noisy_human_realism.py  test_seam.py  test_train_policy.py  test_vision_deploy.py  test_vision_input.py
