[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_teleop"
version = "0.0.1"
description = "AI-assisted robotic teleoperation for precision peg-in-hole insertion (MuJoCo)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Naveh" }]
license = { text = "MIT" }
keywords = ["robotics", "teleoperation", "shared-autonomy", "mujoco", "behavioral-cloning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime dependencies — only what's needed for Milestone 1 (sim online).
# Larger deps (torch, mediapipe, opencv) are pinned in the extras below
# so they can be added when their components come online.
dependencies = [
    "mujoco>=3.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Phase 2 vision + ML stack. Add when policy training comes online.
ml = [
    "torch>=2.2",
    "torchvision>=0.17",
    "pandas>=2.1",
    "pyarrow>=15.0",
]
# Stereo two-webcam hand input (metric 3D, 6-DoF) — the live teleop sensor.
# stereohand brings its own opencv-contrib + mediapipe (Tasks API) transitively.
# See docs/design/teleop-input.md.
# Pinned to a tag, not a bare branch: D2's acceptance is "clean clone -> run", and an
# unpinned git dep silently re-resolves to whatever the default branch holds that day.
stereo-input = [
    "stereohand @ git+https://github.com/NavehBrenner/stereohand.git@v0.1.0",
]
# Visualisation / recording for dev scripts (MP4 + GIF episode captures).
# Not imported by the sim runtime; only the scripts/dev recorders use it.
viz = [
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]
# Offline scene generation — parametric wall/hole CAD → convex-decomposed MJCF.
# Heavy CAD/decomposition deps; never imported by the sim runtime (assets are
# generated offline and cached). See src/ai_teleop/sim/scenegen/.
scenegen = [
    "cadquery>=2.4",
    "trimesh>=4.0",
    "shapely>=2.0",
    "mapbox-earcut>=1.0",
]
# Documentation / design-review deliverables (build the D1 .pptx from SVGs).
docs = [
    "python-pptx>=0.6.23",
    "cairosvg>=2.7",
]
# Prettier console logging. Optional: `ai_teleop.common.log` falls back to a
# plain stdlib formatter when rich is absent (see its soft import).
cli = [
    "rich>=13",
]
# Dev tooling. Includes `cli` so dev/CI consoles render the rich log formatting.
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "poethepoet>=0.24",
    "rich>=13",
]

# The project CLI front door — `kvn` (pronounced "Kevin"). After
# `uv pip install -e .` this lands on PATH; `uv run kvn <command>` also works.
# See src/ai_teleop/cli.py and docs/cli.md.
[project.scripts]
kvn = "ai_teleop.cli:main"

[project.urls]
"Project scope" = "./project-scope.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"] # line length is handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["ai_teleop"]

[tool.ruff.format]
# Preview style (hugs sole bracketed args, etc). Matches the editor's
# format-on-save (`ruff.format.preview` in the workspace .vscode/settings.json)
# so save and `poe fmt`/CI agree instead of reverting each other.
preview = true

[tool.mypy]
python_version = "3.12"
# The gate type-checks the package **and the tests**. `scripts/` stays out for now
# (19 errors in 8 files, incl. a Pillow-10 break in the demo-grid tool) — inventory
# and plan in LAB-113; add it here when that lands.
files = ["src", "tests"]
# Required for the tests to be checked at all: pytest test functions are unannotated
# (218 of 229 here), and mypy skips the *bodies* of unannotated functions by default.
# Listing tests/ without this flag would report ~2 errors and check almost nothing —
# type-checking theatre. src/ is fully annotated, so this changes nothing there.
check_untyped_defs = true
# Third-party scientific/CAD libs (mujoco, trimesh, shapely, scipy, cadquery)
# ship no type stubs; don't fail the gate on their missing-import noise.
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning:cadquery.*",
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore::DeprecationWarning:nptyping.*",
]

# Project task runner (poethepoet) — the "project CLI". Run with `uv run poe <task>`.
# mypy/pytest go through `python -m` because this box's relocated .venv has stale
# console-script shebangs (ruff is a standalone binary, so it's called directly).
[tool.poe.tasks]
# Organize/strip imports (ruff check --fix, incl. the I rule) then format.
# `;` not `&&` so formatting still runs if check leaves an unfixable lint;
# the `lint` task and CI are the real gate.
fmt = { shell = "ruff check --fix src tests scripts; ruff format src tests scripts" }
fmt-check = "ruff format --check src tests scripts"  # non-mutating, for CI
lint = "ruff check --fix src tests scripts"
typecheck = "python -m mypy"
test = "python -m pytest -q"
check = ["lint", "typecheck", "test"]          # the full gate, same as CI
sim = "python scripts/view_generated_wall.py"  # extra args pass through, e.g. poe sim --seed 7
smoke = "python scripts/smoke_test_sim.py"
# Relocated-venv-safe way to reach the `kvn` CLI without the console script
# (whose shebang goes stale when .venv moves). e.g. uv run poe cli gen --episodes 5
cli = "python -m ai_teleop.cli"
